--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -32,6 +32,7 @@ jobs:
         FOLDER: dummy
         SSH_PRIVATE_KEY: ${{ secrets.TESTING_PRIVATE_KEY }}
     - run: cat ~/.ssh/known_hosts
+    - run: cat /etc/ssh/ssh_known_hosts
   deploy-ssh-existing-branch:
     name: Test deploying to a pre-existing branch
     runs-on: ubuntu-latest
@@ -49,6 +50,7 @@ jobs:
         FOLDER: dummy
         SSH_PRIVATE_KEY: ${{ secrets.TESTING_PRIVATE_KEY }}
     - run: cat ~/.ssh/known_hosts
+    - run: cat /etc/ssh/ssh_known_hosts
   deploy-ssh-existing-branch-known_hosts:
     name: Test deploying to a pre-existing branch (with KNOWN_HOSTS_FILE)
     runs-on: ubuntu-latest
@@ -67,6 +69,7 @@ jobs:
         SSH_PRIVATE_KEY: ${{ secrets.TESTING_PRIVATE_KEY }}
         KNOWN_HOSTS_FILE: action/resources/known_hosts_github.com
     - run: cat ~/.ssh/known_hosts
+    - run: cat /etc/ssh/ssh_known_hosts
   deploy-ssh-twice:
     name: Test deploying multiple times in one job
     runs-on: ubuntu-latest    
@@ -93,6 +96,7 @@ jobs:
         FOLDER: dummy2
         SSH_PRIVATE_KEY: ${{ secrets.TESTING_PRIVATE_KEY }}
     - run: cat ~/.ssh/known_hosts
+    - run: cat /etc/ssh/ssh_known_hosts
   deploy-locally:
     name: Test deploying to another branch of same repo
     runs-on: ubuntu-latest
@@ -110,3 +114,4 @@ jobs:
         FOLDER: dummy
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - run: cat ~/.ssh/known_hosts
+    - run: cat /etc/ssh/ssh_known_hosts
